<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <EditText
        android:id="@+id/edtbuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:padding="15dp"
        android:maxLines="1"
        android:drawablePadding="10dp"
        android:hint="@string/hint_search" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnbuscar"
        android:text="@string/button_search"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chkmusica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_music"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:checked="true"/>
        <CheckBox
            android:id="@+id/chkpeliculas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_movies"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:checked="true" />
        <CheckBox
            android:id="@+id/chkllibros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_books"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:checked="true" />

    </LinearLayout>



</LinearLayout>
